HM-75 Add membership ID index column to ensure each member in a membership has a unique ID.